<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the_iceberg_splash_distant_vert">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ssm_banner"
        style="@style/menu_page_banner"
        android:text="@string/ssm_settings_label"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"

        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@color/menu_sub_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ssm_banner">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sm_sfx_label"
            style="@style/submenu_label"
            android:text="@string/ssm_sound_effect_label"

            app:layout_constraintEnd_toStartOf="@id/toggleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggleButton"
            style="@style/submenu_switch"
            android:layout_marginStart="5dp"

            app:layout_constraintBottom_toBottomOf="@id/sm_sfx_label"
            app:layout_constraintStart_toEndOf="@id/sm_sfx_label"
            app:layout_constraintTop_toTopOf="@id/sm_sfx_label"
            app:thumbTint="@color/ice_blue"
            app:trackTint="@color/shaded_ice_blue" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sm_volume_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:contentDescription="@string/ssm_sound_icon_descr"
            android:src="@drawable/ic_sound_icon"
            app:layout_constraintStart_toStartOf="@id/sm_sfx_label"
            app:layout_constraintTop_toBottomOf="@id/sm_sfx_label"
            app:tint="@color/ice_blue" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            style="@style/submenu_slider"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="25dp"

            android:progress="0"
            android:stepSize=".01"
            android:valueFrom="0"
            android:valueTo="1"
            app:layout_constraintBottom_toBottomOf="@id/sm_volume_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sm_volume_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteSaveButton"
            style="@style/submenu_button"
            android:layout_marginTop="25dp"

            android:text="@string/ssm_clear_save_button"
            android:backgroundTint="#FFFF0000"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>